#2885 fix: enum select box overflow in modal window

--- a/Realization/frontend/czechidm-core/themes/red/css/main.less
+++ b/Realization/frontend/czechidm-core/themes/red/css/main.less
@@ -1,6 +1,3 @@
-@brand-success: #A13432;
-@idm-base-color: #A13432;
-@idm-link-color: #A13432;
 header {
 
   .home {
